--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,4 +1,23 @@
-<p>main-layout works!</p>
+<form class="header" [formGroup]="form" (ngSubmit)="submit()">
+    <div>
+        <input type="text" formControlName="search" />
+        <button type="submit" [disabled]="form.invalid">Search</button>
+    </div>
+
+    <div>
+        <select size="1" formControlName="categories">
+            <option *ngFor="let category of categories" value="{{ category }}">
+                {{ category }}
+            </option>
+        </select>
+
+        <select size="1" formControlName="orderBy">
+            <option *ngFor="let sort of sorts" value="{{ sort }}">
+                {{ sort }}
+            </option>
+        </select>
+    </div>
+</form>
 
 <div class="container">
     <router-outlet></router-outlet>
