--- a/src/app/item-book/item-book.component.html
+++ b/src/app/item-book/item-book.component.html
@@ -1,1 +1,10 @@
-<p>item-book works!</p>
+<ng-container *ngIf="bookData$ | async as data">
+    <div class="container">
+        <div class="wrapperBtn">
+            <button class="btn" (click)="backClicked()">Back</button>
+        </div>
+        <h1 class="title">{{data.volumeInfo.title}}</h1>
+        <img class="image" [src]="data.volumeInfo.imageLinks.thumbnail" alt="#" />
+        <p class="subtitle">{{data.volumeInfo.subtitle}}</p>
+    </div>
+</ng-container>
