--- a/src/app/list-books/list-books.component.scss
+++ b/src/app/list-books/list-books.component.scss
@@ -4,6 +4,22 @@
     flex-shrink: 1;
     flex-wrap: wrap;
     .item-book {
+        margin: 10px 0;
+        border: black 1px solid;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
         width: 45%;
+        cursor: pointer;
+        .title {
+            margin: 25px 0;
+            font-size: 32px;
+            font-weight: bold;
+            text-align: center;
+        }
+        .image {
+            padding: 20px 0;
+        }
     }
 }
