--- a/src/app/shared/components/main-layout/main-layout.component.scss
+++ b/src/app/shared/components/main-layout/main-layout.component.scss
@@ -68,3 +68,14 @@
     font-size: 18px;
     cursor: pointer;
 }
+
+.btn {
+    display: block;
+    margin: 20px auto;
+    background: black;
+    color: white;
+    font-size: 24px;
+    padding: 5px 20px;
+    border-radius: 12px;
+    cursor: pointer;
+}
